# github-sdv-poc-msp-azure-iot-bridge

./: .clang-format  .gitmodules  CMakeLists.txt  package.xml
azure_iot/include/azure_iot/: client_iot.hpp  client_iot_impl.hpp
azure_iot/src/: client_iot.cpp  client_iot_impl.cpp  main.cpp
include/azure_iot/: client_iot.hpp  client_iot_impl.hpp
src/: client_iot.cpp  client_iot_impl.cpp  client_iot_impl.hpp
